Prevent line breaks in negated and custom attribute filters

--- a/web/htdocs/themes/facelift/scss/_page_menu.scss
+++ b/web/htdocs/themes/facelift/scss/_page_menu.scss
@@ -627,7 +627,7 @@ div#page_menu_popups div.side_popup {
       box-shadow: none;
 
       input.neg[type="text"] {
-        width: 81%;
+        width: 74%;
       }
 
       div.content {
